restructured codebase to use enums and refactored files in agent package